# MiniRT

./: CMakeLists.txt  Makefile  MiniRT.h  README.md  main.c  minirt.rt  save_to_bmp.c  threads.c  utils.c
MiniRT.dSYM/Contents/: Info.plist
figur_list/: sphere.c
gnl/: get_next_line.c  get_next_line.h  get_next_line_utils.c
includes/: MiniRT.h  array.h  camera.h  colors.h  figures.h  intersect.h  lists.h  mlx_image.h  parser.h  scene.h  sphere.h  sphere_inters.h  threads.h  utils.h  vectors.h  vplane.h
intersec/: interset.c  sphere_inters.c
lists_funcs/: array_funcs.c  list_camera_funcs.c  list_figures_funcs.c  list_lights_func.c
minilibx-linux/test/: mlx-test
mlx/: mlx_opengl.h
parser/: figures_creation.c  parser.c  utils.c
ray_trace/: phong_notes  print_scene.c  ray_trace.c
ready_scenes/: cat.rt  pens.rt  room.rt  room_first.rt  room_two.rt  spheres_and_planes.rt  sq_test.rt  tmp.rt  triangle_one.rt  wolf.rt
scene/: camera.c  scene.c
srcs/: hooks_utils.c  main.c  save_to_bmp.c  scene_utils.c  threads.c
srcs/gnl/: get_next_line.c  get_next_line.h  get_next_line_utils.c
srcs/includes/: MiniRT.h  array.h  colors.h  figures.h  intersect.h  lists.h  mlx_image.h  parser.h  threads.h  vectors.h  vplane.h
utilits/: killed_by_error.c
vectors_funcs/: cross_prod.c  main.c  matrices_declaration.c  matrix_decl.c  matrix_multip.c  new_vector.c  place_camera.c  terms  vector_length.c  vector_normalise.c  vector_scalar_mult.c  vectors.h  vectors_add_substract.c
vectors_try/: multip_vector_by_matix.c  vector_mult_by_scal.c  vectors.h  vectors_add.c
(+30 files in other folders)
